--- a/graficos/jogo/jogo/jogo.csproj
+++ b/graficos/jogo/jogo/jogo.csproj
@@ -27,4 +27,10 @@
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="NomeDaSuaDll">
+      <HintPath>Users\anake\OneDrive\Documentos\GitHub\eu\.vscode\nexusnumber\graficos\jogo\jogo/logica.dll</HintPath>
+      <Private>true</Private>
+    </Reference>
+  </ItemGroup>
 </Project>
